--- a/pom.xml
+++ b/pom.xml
@@ -465,7 +465,7 @@
           <version>${jacoco-maven-plugin.version}</version>
           <configuration>
             <includes>
-              <include>io/jenkins/plugins/git/forensics/**/*</include>
+              <include>io/jenkins/plugins/git/**/*</include>
             </includes>
           </configuration>
           <executions>
