--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
 
     <!-- Jenkins Plugin Dependencies Versions -->
-    <forensics-api-plugin.version>0.1.0-SNAPSHOT</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.1-alpha-1</forensics-api-plugin.version>
     <git-plugin.version>3.9.1</git-plugin.version>
 
     <!-- Test Library Dependencies Versions -->
@@ -146,6 +146,18 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
       <version>${junit-platform-launcher.version}</version>
@@ -192,6 +204,12 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire.plugin}</version>
+        <configuration>
+          <excludes>
+            <exclude>**/*ITest.*</exclude>
+            <exclude>**/InjectedTest.*</exclude>
+          </excludes>
+        </configuration>
         <dependencies>
           <dependency>
             <groupId>com.tngtech.archunit</groupId>
@@ -199,6 +217,25 @@
             <version>${archunit.version}</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${maven-failsafe.plugin}</version>
+        <configuration>
+          <includes>
+            <include>**/*ITest.*</include>
+            <include>**/*InjectedTest.*</include>
+          </includes>
+          <reuseForks>false</reuseForks>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
