--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,6 +3,9 @@ tag-template: git-forensics-$NEXT_MINOR_VERSION
 name-template: Git Forensics $NEXT_PATCH_VERSION 🎁
 version-template: $MAJOR.$MINOR.$PATCH
 
+template: |
+  $CHANGES
+
 categories:
   - title: 🚨 Removed
     label: removed
