--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-jdk: oraclejdk8
+jdk: openjdk8
 install : true
 script: mvn -B -V clean verify jacoco:prepare-agent test failsafe:integration-test jacoco:report
 after_success:
