--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
     </license>
   </licenses>
 
+  <developers>
+    <developer>
+      <name>Ullrich Hafner</name>
+      <id>uhafner</id>
+      <email>ullrich.hafner@gmail.com</email>
+    </developer>
+  </developers>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
