--- a/pom.xml
+++ b/pom.xml
@@ -462,6 +462,7 @@
           </dependency>
         </dependencies>
         <configuration>
+          <skip>true</skip>
           <analysisConfiguration>
             <revapi.semver.ignore>
               <enabled>true</enabled>
