Add incrementals repository.

--- a/pom.xml
+++ b/pom.xml
@@ -639,6 +639,10 @@
 
   <repositories>
     <repository>
+      <id>incrementals.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/incrementals/</url>
+    </repository>
+    <repository>
       <id>repo.jenkins-ci.org</id>
       <url>http://repo.jenkins-ci.org/public/</url>
     </repository>
