--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
 
     <!-- Jenkins Plugin Dependencies Versions -->
-    <plugin-util-api.version>0.1.0-beta1-SNAPSHOT</plugin-util-api.version>
-    <forensics-api-plugin.version>0.6.2-SNAPSHOT</forensics-api-plugin.version>
-    <git-plugin.version>3.9.1</git-plugin.version>
+    <plugin-util-api.version>0.1.0-beta1</plugin-util-api.version>
+    <forensics-api-plugin.version>0.7.0-beta1</forensics-api-plugin.version>
+    <git-plugin.version>4.0.0</git-plugin.version>
 
     <!-- Test Library Dependencies Versions -->
     <junit.version>5.5.2</junit.version>
