--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <revapi-maven-plugin.version>0.11.2</revapi-maven-plugin.version>
     <revapi-java.version>0.20.0</revapi-java.version>
 
+    <scm-api.version>2.6.3</scm-api.version>
   </properties>
 
   <licenses>
@@ -104,17 +105,17 @@
       <dependency>
         <groupId>org.jenkins-ci.plugins.workflow</groupId>
         <artifactId>workflow-step-api</artifactId>
-        <version>2.19</version>
+        <version>2.20</version>
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>structs</artifactId>
-        <version>1.17</version>
+        <version>1.20</version>
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>scm-api</artifactId>
-        <version>2.2.6</version>
+        <version>${scm-api.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -277,7 +278,8 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>scm-api</artifactId>
-      <version>2.2.7</version>
+      <version>${scm-api.version}</version>
+      <scope>test</scope>
       <type>test-jar</type>
     </dependency>
 
