--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
 
     <!-- Jenkins Plugin Dependencies Versions -->
     <plugin-util-api.version>0.1.0-beta1</plugin-util-api.version>
-    <forensics-api-plugin.version>0.7.0-beta1</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.7.0-beta2</forensics-api-plugin.version>
     <git-plugin.version>4.0.0</git-plugin.version>
+    <scm-api.version>2.6.3</scm-api.version>
 
     <!-- Test Library Dependencies Versions -->
     <junit.version>5.5.2</junit.version>
@@ -67,7 +68,6 @@
     <revapi-maven-plugin.version>0.11.2</revapi-maven-plugin.version>
     <revapi-java.version>0.20.0</revapi-java.version>
 
-    <scm-api.version>2.6.3</scm-api.version>
   </properties>
 
   <licenses>
@@ -100,7 +100,7 @@
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>script-security</artifactId>
-        <version>1.58</version>
+        <version>1.62</version>
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins.workflow</groupId>
@@ -281,6 +281,23 @@
       <version>${scm-api.version}</version>
       <scope>test</scope>
       <type>test-jar</type>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-test-harness</artifactId>
+      <version>${jenkins-test-harness.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jenkins-ci.main</groupId>
+          <artifactId>jenkins-test-harness-htmlunit</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-test-harness-htmlunit</artifactId>
+      <version>2.36.0-1</version>
     </dependency>
 
   </dependencies>
