Integrate find security bugs SpotBugs plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -511,7 +511,7 @@
             <plugin>
               <groupId>com.h3xstream.findsecbugs</groupId>
               <artifactId>findsecbugs-plugin</artifactId>
-              <version>1.10.1</version>
+              <version>${findsecbugs-plugin.version}</version>
             </plugin>
           </plugins>
         </configuration>
