--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,12 @@
       <artifactId>junit</artifactId>
       <version>4.13</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.junit.platform</groupId>
