--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,11 @@
       <version>2.2.7</version>
       <type>test-jar</type>
     </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>branch-api</artifactId>
+          <version>1.11</version>
+      </dependency>
 
   </dependencies>
 
