--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>2.1.3</version>
+    <version>2.1.4</version>
     <relativePath />
   </parent>
 
@@ -28,9 +28,11 @@
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
 
     <!-- Jenkins Plugin Dependencies Versions -->
-    <plugin-util-api.version>0.1.0-beta6</plugin-util-api.version>
-    <data-tables-api.version>1.10.20-7-beta1</data-tables-api.version>
-    <forensics-api-plugin.version>0.7.0-beta6</forensics-api-plugin.version>
+    <plugin-util-api.version>0.1.0-beta7</plugin-util-api.version>
+    <data-tables-api.version>1.10.20-8-beta1</data-tables-api.version>
+    <forensics-api-plugin.version>0.7.0-beta7-rc413.12d1f0c9d047</forensics-api-plugin.version>
+    <codingstyle.library.version>0.4.4</codingstyle.library.version>
+
     <git-plugin.version>4.0.0</git-plugin.version>
     <git-client.version>3.1.1</git-client.version>
     <scm-api.version>2.6.3</scm-api.version>
@@ -125,7 +127,7 @@
     <dependency>
       <groupId>edu.hm.hafner</groupId>
       <artifactId>codingstyle</artifactId>
-      <version>${codingstyle.version}</version>
+      <version>${codingstyle.library.version}</version>
       <scope>test</scope>
       <type>test-jar</type>
     </dependency>
