--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
 
     <!-- Jenkins Plugin Dependencies Versions -->
-    <plugin-util-api.version>0.1.0-beta10</plugin-util-api.version>
+    <plugin-util-api.version>1.0.0</plugin-util-api.version>
     <data-tables-api.version>1.10.20-10-beta1</data-tables-api.version>
     <forensics-api-plugin.version>0.7.0-beta8</forensics-api-plugin.version>
     <codingstyle.library.version>1.0.0</codingstyle.library.version>
