--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <url>https://github.com/jenkinsci/git-forensics-plugin</url>
 
   <properties>
-    <revision>0.7.0-beta7</revision>
+    <revision>0.7.0</revision>
     <changelist>-SNAPSHOT</changelist>
 
     <module.name>${project.groupId}.git.forensics</module.name>
@@ -30,7 +30,7 @@
     <!-- Jenkins Plugin Dependencies Versions -->
     <plugin-util-api.version>1.0.1</plugin-util-api.version>
     <data-tables-api.version>1.10.20-13</data-tables-api.version>
-    <forensics-api-plugin.version>0.7.0-beta8</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.7.0</forensics-api-plugin.version>
 
     <git-plugin.version>4.1.1</git-plugin.version>
     <git-client.version>3.1.1</git-client.version>
