--- a/src/main/resources/io/jenkins/plugins/git/forensics/reference/GitReferenceRecorder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/git/forensics/reference/GitReferenceRecorder/config.properties
@@ -7,3 +7,13 @@ title.referenceJob=Reference Job
 description.referenceJob=The reference job is the baseline that is used to determine which of the issues in the current \
     build are new, outstanding, or fixed. This baseline is also used to determine the number of new issues for the \
     quality gate evaluation.
+
+title.skipUnknownCommits=Skip builds with unknown commits
+description.skipUnknownCommits=Since its possible for a build to be based on more than one new commits and also its \
+    possible to checkout every revision this option (if checked) will assure that builds of the reference branch with \
+    unknown commits to the current branch will be ignored while finding the reference point. Disabled by default.
+
+title.newestBuildIfNotFound=Use newest build of reference job if no intersection is found
+description.newestBuildIfNotFound=If there are no common commits between the current branch and the reference branch \
+    looking at the last x commits where x the amount of Maximal Commits, then the newest build of the reference job \
+    will be used as reference. Disabled by default.
