--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <url>https://github.com/jenkinsci/git-forensics-plugin</url>
 
   <properties>
-    <revision>0.21.0-alpha-SNAPSHOT</revision>
+    <revision>0.21.0-alpha</revision>
     <changelist>-SNAPSHOT</changelist>
 
     <module.name>${project.groupId}.git.forensics</module.name>
@@ -30,7 +30,7 @@
     <!-- Jenkins Plugin Dependencies Versions -->
     <plugin-util-api.version>1.2.1</plugin-util-api.version>
     <data-tables-api.version>1.10.20-15</data-tables-api.version>
-    <forensics-api-plugin.version>0.21.0-alpha-rc534.447d402c1334</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.21.0-alpha-rc535.87e126654dcb</forensics-api-plugin.version>
 
     <git-plugin.version>4.2.2</git-plugin.version>
     <git-client.version>3.2.1</git-client.version>
