--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -60,6 +60,11 @@
         <artifactId>git-client</artifactId>
         <version>${git-client.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>jackson2-api</artifactId>
+        <version>2.11.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
