Merger GitParentCommitFinder with GitReferenceRecorder

--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
@@ -1,3 +1,5 @@
+title.referenceBuildFinderStrategy=Reference Build Finder Strategy
+description.referenceBuildFinderStrategy=Select the strategy for finding the reference build baseline
 title.referenceJob=Reference Job
 description.referenceJob=A reference job defines the baseline for tools that want to create relative build reports.
 title.maxCommits=#Commits
