Improve security for `doFill` methods.
- Check for @POST
- Add permission checks

--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
@@ -5,8 +5,5 @@ description.maxCommits=Defines how many commits of a job's Git history should be
 title.defaultBranch=Default Branch
 description.defaultBranch=The default branch to use as reference job for multi-branch pipelines. If empty then `master` \
    will be used.
-title.skipUnknownCommits=Skip unknown commits
-description.skipUnknownCommits=Ignore possible reference builds that contain commits that are not part of the current \
-  build.
-title.latestBuildIfNotFound=Fallback to latest build
-description.latestBuildIfNotFound=If no reference build is found, then the latest build of the reference job will be used.
+title.skipUnknownCommits=Ignore builds with commits that are not part of the current build
+title.latestBuildIfNotFound=Fallback to latest build if no reference build has been found
