do not trim the stacktrace

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -113,6 +113,17 @@
   </profiles>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <trimStackTrace>false</trimStackTrace> <!-- SUREFIRE-1798 -->
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.assertj</groupId>
