just make the testing quicker

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -32,6 +32,8 @@
     <data-tables-api.version>1.10.21-3</data-tables-api.version>
     <forensics-api-plugin.version>0.9.3</forensics-api-plugin.version>
 
+    <maven.test.skip>true</maven.test.skip>
+
     <git-plugin.version>4.4.5</git-plugin.version>
     <git-client.version>3.5.1</git-client.version>
     <scm-api.version>2.6.4</scm-api.version>
