Fix naming of SCM field.

--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
@@ -1,7 +1,7 @@
 title.referenceJob=Reference Job
 description.referenceJob=A reference job defines the baseline for tools that want to create relative build reports.
 title.scm=SCM Key
-description.scm=Specify the key of your repository (substring) if you are using multiple SCMs in your job.
+description.scm=Specify the key of your repository (substring is sufficient) if you are using multiple SCMs in your job.
 title.maxCommits=#Commits
 description.maxCommits=Defines how many commits of a job's Git history should be evaluated to find the reference build.
 title.defaultBranch=Default Branch
